--- a/clase_p_5.ipynb
+++ b/clase_p_5.ipynb
@@ -256,11 +256,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7f99e69c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.013\n",
+      "Model:                            OLS   Adj. R-squared:                  0.003\n",
+      "Method:                 Least Squares   F-statistic:                     1.268\n",
+      "Date:                Sun, 16 Nov 2025   Prob (F-statistic):              0.263\n",
+      "Time:                        00:32:08   Log-Likelihood:                -482.33\n",
+      "No. Observations:                 100   AIC:                             968.7\n",
+      "Df Residuals:                      98   BIC:                             973.9\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const        106.4359      5.213     20.416      0.000      96.090     116.782\n",
+      "D              7.2274      6.417      1.126      0.263      -5.508      19.962\n",
+      "==============================================================================\n",
+      "Omnibus:                        4.196   Durbin-Watson:                   1.800\n",
+      "Prob(Omnibus):                  0.123   Jarque-Bera (JB):                4.060\n",
+      "Skew:                          -0.264   Prob(JB):                        0.131\n",
+      "Kurtosis:                       3.834   Cond. No.                         3.19\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# =========================================\n",
+    "# 1) Setup: N, semilla\n",
+    "# =========================================\n",
+    "np.random.seed(2703)\n",
+    "n = 100\n",
+    "\n",
+    "# =========================================\n",
+    "# 2) Resultados potenciales\n",
+    "# =========================================\n",
+    "# y0 ~ N(100, 30^2)\n",
+    "y0 = np.random.normal(loc=100, scale=30, size=n)\n",
+    "\n",
+    "# te ~ N(20, 10^2)\n",
+    "te = np.random.normal(loc=20, scale=10, size=n)\n",
+    "\n",
+    "# y1 = y0 + te + N(0, 10^2)\n",
+    "y1 = y0 + te + np.random.normal(loc=0, scale=10, size=n)\n",
+    "\n",
+    "# =========================================\n",
+    "# 3) Asignación aleatoria A (como \"random>0\")\n",
+    "# =========================================\n",
+    "random_normal = np.random.normal(loc=0, scale=1, size=n)\n",
+    "A = (random_normal > 0).astype(int)\n",
+    "\n",
+    "# =========================================\n",
+    "# 4) Tipos de individuos (alwaystaker, nevertaker, defier, complier)\n",
+    "# =========================================\n",
+    "random2 = np.random.uniform(0, 1, size=n)\n",
+    "\n",
+    "alwaystaker = (random2 < 0.3)\n",
+    "nevertaker  = (random2 >= 0.3) & (random2 < 0.5)\n",
+    "defier      = (random2 >= 0.5) & (random2 < 0.7)\n",
+    "complier    = (random2 > 0.7)\n",
+    "\n",
+    "# =========================================\n",
+    "# 5) Tratamiento efectivamente recibido D\n",
+    "# =========================================\n",
+    "D = np.zeros(n, dtype=int)\n",
+    "\n",
+    "# always-takers siempre 1\n",
+    "D[alwaystaker] = 1\n",
+    "\n",
+    "# never-takers siempre 0 (ya está en 0 por defecto, pero lo dejamos claro)\n",
+    "D[nevertaker] = 0\n",
+    "\n",
+    "# compliers siguen la asignación A\n",
+    "D[complier] = A[complier]\n",
+    "\n",
+    "# defiers hacen lo contrario a la asignación A\n",
+    "D[defier] = 1 - A[defier]\n",
+    "\n",
+    "# =========================================\n",
+    "# 6) Variable observada y\n",
+    "# =========================================\n",
+    "y = D * y1 + (1 - D) * y0\n",
+    "\n",
+    "# Armamos DataFrame tipo Stata\n",
+    "df = pd.DataFrame({\n",
+    "    \"y0\": y0,\n",
+    "    \"y1\": y1,\n",
+    "    \"te\": te,\n",
+    "    \"A\": A,\n",
+    "    \"D\": D,\n",
+    "    \"y\": y,\n",
+    "    \"alwaystaker\": alwaystaker.astype(int),\n",
+    "    \"nevertaker\": nevertaker.astype(int),\n",
+    "    \"defier\": defier.astype(int),\n",
+    "    \"complier\": complier.astype(int),\n",
+    "})\n",
+    "\n",
+    "# =========================================\n",
+    "# 7) Regress y D  (equivalente a: regress y D en Stata)\n",
+    "# =========================================\n",
+    "X = sm.add_constant(df[\"D\"])   # agrega intercepto como Stata\n",
+    "model = sm.OLS(df[\"y\"], X).fit()\n",
+    "\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "522de73c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y0</th>\n",
+       "      <th>te</th>\n",
+       "      <th>y1</th>\n",
+       "      <th>random</th>\n",
+       "      <th>A</th>\n",
+       "      <th>random2</th>\n",
+       "      <th>alwaystaker</th>\n",
+       "      <th>nevertaker</th>\n",
+       "      <th>defier</th>\n",
+       "      <th>complier</th>\n",
+       "      <th>D</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>89.203667</td>\n",
+       "      <td>12.81073</td>\n",
+       "      <td>109.771561</td>\n",
+       "      <td>-0.209102</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.492404</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>89.203667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          y0        te          y1    random    A   random2  alwaystaker  \\\n",
+       "0  89.203667  12.81073  109.771561 -0.209102  0.0  0.492404          0.0   \n",
+       "\n",
+       "   nevertaker  defier  complier    D          y  \n",
+       "0         1.0     0.0       0.0  0.0  89.203667  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import pyreadstat as st\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "path = r\"C:\\Users\\HP\\OneDrive\\Escritorio\\David Guzzi\\DiTella\\MEC\\Materias\\2025\\2025 2T\\[MT08-MT13] Microeconometría II\\Clases prácticas\\PS\\PS5-20251103\\ps5_ex2_2.dta\"\n",
+    "\n",
+    "df, meta = st.read_dta(path)\n",
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c6bea106",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.045\n",
+      "Model:                            OLS   Adj. R-squared:                  0.036\n",
+      "Method:                 Least Squares   F-statistic:                     4.645\n",
+      "Date:                Sun, 16 Nov 2025   Prob (F-statistic):             0.0336\n",
+      "Time:                        00:32:31   Log-Likelihood:                -488.65\n",
+      "No. Observations:                 100   AIC:                             981.3\n",
+      "Df Residuals:                      98   BIC:                             986.5\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         98.4163      4.775     20.612      0.000      88.941     107.891\n",
+      "D             14.0029      6.497      2.155      0.034       1.109      26.897\n",
+      "==============================================================================\n",
+      "Omnibus:                        0.658   Durbin-Watson:                   1.754\n",
+      "Prob(Omnibus):                  0.720   Jarque-Bera (JB):                0.361\n",
+      "Skew:                           0.136   Prob(JB):                        0.835\n",
+      "Kurtosis:                       3.112   Cond. No.                         2.72\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = sm.add_constant(df[\"D\"])   # agrega intercepto como Stata\n",
+    "model = sm.OLS(df[\"y\"], X).fit()\n",
+    "\n",
+    "print(model.summary())"
+   ]
   }
  ],
  "metadata": {
