--- a/clase_p_5.ipynb
+++ b/clase_p_5.ipynb
@@ -504,6 +504,54 @@
     "\n",
     "print(model.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "50275874",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== IV 2SLS: ivregress 2sls y (D=A) ===\n",
+      "                          IV-2SLS Estimation Summary                          \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                     -0.1423\n",
+      "Estimator:                    IV-2SLS   Adj. R-squared:                -0.1539\n",
+      "No. Observations:                 100   F-statistic:                    0.0946\n",
+      "Date:                Sun, Nov 16 2025   P-value (F-stat)                0.7584\n",
+      "Time:                        00:37:01   Distribution:                  chi2(1)\n",
+      "Cov. Estimator:            unadjusted                                         \n",
+      "                                                                              \n",
+      "                             Parameter Estimates                              \n",
+      "==============================================================================\n",
+      "            Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept      113.81     25.700     4.4284     0.0000      63.439      164.18\n",
+      "D             -14.503     47.147    -0.3076     0.7584     -106.91      77.904\n",
+      "==============================================================================\n",
+      "\n",
+      "Endogenous: D\n",
+      "Instruments: A\n",
+      "Unadjusted Covariance (Homoskedastic)\n",
+      "Debiased: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from linearmodels.iv import IV2SLS\n",
+    "\n",
+    "iv_model = IV2SLS.from_formula(\n",
+    "    \"y ~ 1 + [D ~ A]\",  # y ~ const + (D instrumentado por A)\n",
+    "    data=df\n",
+    ").fit(cov_type=\"unadjusted\")  # para que sea comparable al default de Stata\n",
+    "\n",
+    "print(\"\\n=== IV 2SLS: ivregress 2sls y (D=A) ===\")\n",
+    "print(iv_model.summary)"
+   ]
   }
  ],
  "metadata": {
