--- a/clase_p_5.ipynb
+++ b/clase_p_5.ipynb
@@ -552,6 +552,259 @@
     "print(\"\\n=== IV 2SLS: ivregress 2sls y (D=A) ===\")\n",
     "print(iv_model.summary)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b638c3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.spatial.distance import cdist\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.regression.linear_model import OLS\n",
+    "from statsmodels.discrete.discrete_model import Logit\n",
+    "\n",
+    "\n",
+    "def generate_dgp_exercise3(n, seed=None, weak_instrument=False):\n",
+    "    \"\"\"\n",
+    "    Genera datos para el Ejercicio 3: Variables Instrumentales (IV).\n",
+    "\n",
+    "    DGP con endogeneidad:\n",
+    "    - Z ~ Bernoulli(0.5) (instrumento)\n",
+    "    - X ~ N(0, 1) (covariable)\n",
+    "    - v ~ N(0, 1) (error estructural)\n",
+    "    - D = 0.2 + γ*Z + 0.5*X + v, donde γ = 0.3 (fuerte) o 0.05 (débil)\n",
+    "    - ε ~ N(0, 1) (error idiosincrático)\n",
+    "    - u = 0.8*v + ε (endogeneidad)\n",
+    "    - Y = 5 + 2*D + X + u\n",
+    "    - ATE verdadero = 2\n",
+    "\n",
+    "    Parámetros\n",
+    "    ----------\n",
+    "    n : int\n",
+    "        Tamaño de muestra\n",
+    "    seed : int, optional\n",
+    "        Semilla para reproducibilidad\n",
+    "    weak_instrument : bool, default=False\n",
+    "        Si True, usa γ=0.05 (instrumento débil)\n",
+    "        Si False, usa γ=0.3 (instrumento fuerte)\n",
+    "\n",
+    "    Retorna\n",
+    "    -------\n",
+    "    dict\n",
+    "        Diccionario con claves:\n",
+    "        - 'Y': Variable de resultado (array)\n",
+    "        - 'D': Variable endógena de tratamiento (array)\n",
+    "        - 'Z': Variable instrumental (array)\n",
+    "        - 'X': Covariable exógena (array)\n",
+    "        - 'true_ate': ATE verdadero (float)\n",
+    "        - 'instrument_strength': Fuerza del instrumento ('strong' o 'weak')\n",
+    "    \"\"\"\n",
+    "    if seed is not None:\n",
+    "        np.random.seed(seed)\n",
+    "\n",
+    "    # Coeficiente del instrumento\n",
+    "    gamma = 0.05 if weak_instrument else 0.3\n",
+    "\n",
+    "    # Generar instrumento y covariable\n",
+    "    Z = np.random.binomial(1, 0.5, n)\n",
+    "    X = np.random.normal(0, 1, n)\n",
+    "\n",
+    "    # Generar tratamiento endógeno (primera etapa)\n",
+    "    v = np.random.normal(0, 1, n)\n",
+    "    D = 0.2 + gamma * Z + 0.5 * X + v\n",
+    "\n",
+    "    # Generar variable de resultado con endogeneidad\n",
+    "    epsilon = np.random.normal(0, 1, n)\n",
+    "    u = 0.8 * v + epsilon  # Correlación entre u y v\n",
+    "    Y = 5 + 2 * D + X + u\n",
+    "\n",
+    "    return {\n",
+    "        'Y': Y,\n",
+    "        'D': D,\n",
+    "        'Z': Z,\n",
+    "        'X': X,\n",
+    "        'true_ate': 2.0,\n",
+    "        'instrument_strength': 'weak' if weak_instrument else 'strong'\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def estimate_2sls(y, d, z, x):\n",
+    "    \"\"\"\n",
+    "    Estima el ATE mediante Two-Stage Least Squares (2SLS).\n",
+    "\n",
+    "    Primera etapa:  D = π0 + π1*Z + π2*X + v\n",
+    "    Segunda etapa: Y = β0 + β1*D̂ + β2*X + u\n",
+    "\n",
+    "    Estimador: ATE = β1\n",
+    "\n",
+    "    Parámetros\n",
+    "    ----------\n",
+    "    y : array-like\n",
+    "        Variable de resultado\n",
+    "    d : array-like\n",
+    "        Variable endógena (tratamiento)\n",
+    "    z : array-like\n",
+    "        Instrumento(s)\n",
+    "    x : array-like\n",
+    "        Covariable(s) exógena(s)\n",
+    "\n",
+    "    Retorna\n",
+    "    -------\n",
+    "    dict\n",
+    "        Diccionario con:\n",
+    "        - 'ate_ols': ATE usando OLS naive (sesgado)\n",
+    "        - 'ate_2sls': ATE usando 2SLS\n",
+    "        - 'se_2sls': Error estándar 2SLS\n",
+    "        - 'ci_lower': Límite inferior IC 95%\n",
+    "        - 'ci_upper': Límite superior IC 95%\n",
+    "        - 'first_stage_f': Estadístico F de primera etapa\n",
+    "    \"\"\"\n",
+    "    y = np.asarray(y)\n",
+    "    d = np.asarray(d)\n",
+    "    z = np.asarray(z)\n",
+    "    x = np.asarray(x)\n",
+    "    n = len(y)\n",
+    "\n",
+    "    # Asegurar formato matricial\n",
+    "    if z.ndim == 1:\n",
+    "        z = z.reshape(-1, 1)\n",
+    "    if x.ndim == 1:\n",
+    "        x = x.reshape(-1, 1)\n",
+    "\n",
+    "    # OLS naive (para comparación)\n",
+    "    X_ols = np.column_stack([np.ones(n), d, x])\n",
+    "    ols_model = OLS(y, X_ols).fit()\n",
+    "    ate_ols = ols_model.params[1]\n",
+    "\n",
+    "    # Primera etapa: D ~ Z + X\n",
+    "    X_first = np.column_stack([np.ones(n), z, x])\n",
+    "    first_stage = OLS(d, X_first).fit()\n",
+    "\n",
+    "    # Calcular estadístico F de primera etapa\n",
+    "    # F-test de significancia conjunta de instrumentos\n",
+    "    k_instruments = z.shape[1]\n",
+    "    r_matrix = np.zeros((k_instruments, first_stage.params.shape[0]))\n",
+    "    for i in range(k_instruments):\n",
+    "        r_matrix[i, i + 1] = 1  # Posiciones de los instrumentos (después de constante)\n",
+    "\n",
+    "    f_test = first_stage.f_test(r_matrix)\n",
+    "    first_stage_f = f_test.fvalue\n",
+    "\n",
+    "    # Valores predichos de D\n",
+    "    d_hat = first_stage.predict(X_first)\n",
+    "\n",
+    "    # Segunda etapa: Y ~ D̂ + X\n",
+    "    X_second = np.column_stack([np.ones(n), d_hat, x])\n",
+    "    second_stage = OLS(y, X_second).fit()\n",
+    "\n",
+    "    # Nota: Los errores estándar de la segunda etapa no son correctos\n",
+    "    # porque no ajustan por la incertidumbre de la primera etapa.\n",
+    "    # Para errores correctos, usaríamos el estimador manual de 2SLS.\n",
+    "\n",
+    "    # Cálculo manual de 2SLS para errores estándar correctos\n",
+    "    # Matriz de instrumentos: [1, Z, X]\n",
+    "    W = X_first\n",
+    "    # Matriz de regresores: [1, D, X]\n",
+    "    X_design = np.column_stack([np.ones(n), d, x])\n",
+    "\n",
+    "    # Proyección: X̂ = W(W'W)^-1 W'X\n",
+    "    P_W = W @ np.linalg.inv(W.T @ W) @ W.T\n",
+    "    X_hat = P_W @ X_design\n",
+    "\n",
+    "    # Estimador 2SLS: β = (X̂'X)^-1 X̂'y\n",
+    "    beta_2sls = np.linalg.inv(X_hat.T @ X_design) @ X_hat.T @ y\n",
+    "\n",
+    "    # Residuos\n",
+    "    residuals = y - X_design @ beta_2sls\n",
+    "\n",
+    "    # Varianza de errores\n",
+    "    sigma2 = (residuals ** 2).sum() / (n - X_design.shape[1])\n",
+    "\n",
+    "    # Matriz de varianza-covarianza\n",
+    "    vcov = sigma2 * np.linalg.inv(X_hat.T @ X_design)\n",
+    "    se_2sls = np.sqrt(np.diag(vcov))\n",
+    "\n",
+    "    ate_2sls = beta_2sls[1]\n",
+    "    se_ate = se_2sls[1]\n",
+    "\n",
+    "    # Intervalo de confianza\n",
+    "    ci_lower = ate_2sls - 1.96 * se_ate\n",
+    "    ci_upper = ate_2sls + 1.96 * se_ate\n",
+    "\n",
+    "    return {\n",
+    "        'ate_ols': ate_ols,\n",
+    "        'ate_2sls': ate_2sls,\n",
+    "        'se_2sls': se_ate,\n",
+    "        'ci_lower': ci_lower,\n",
+    "        'ci_upper': ci_upper,\n",
+    "        'first_stage_f': first_stage_f\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "60933512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Mi 2SLS casero ===\n",
+      "beta_D      = 1.8138076803606629\n",
+      "se(beta_D)  = 0.28912732911094885\n",
+      "F 1ra etapa = 23.16967953996404\n",
+      "\n",
+      "=== IV 2SLS (IV2SLS) ===\n",
+      "beta_D      = 1.8138076803607066\n",
+      "se(beta_D)  = 0.28869331236021034\n",
+      "F 1ra etapa = 23.239397733163443\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from statsmodels.regression.linear_model import OLS\n",
+    "from linearmodels.iv import IV2SLS\n",
+    "\n",
+    "# Generar datos con tu DGP\n",
+    "data = generate_dgp_exercise3(n=1000, seed=123, weak_instrument=False)\n",
+    "\n",
+    "y = data['Y']\n",
+    "d = data['D']\n",
+    "z = data['Z']\n",
+    "x = data['X']\n",
+    "\n",
+    "# --- Tu 2SLS casero ---\n",
+    "res = estimate_2sls(y, d, z, x)\n",
+    "print(\"=== Mi 2SLS casero ===\")\n",
+    "print(\"beta_D      =\", res['ate_2sls'])\n",
+    "print(\"se(beta_D)  =\", res['se_2sls'])\n",
+    "print(\"F 1ra etapa =\", res['first_stage_f'])\n",
+    "\n",
+    "# --- IV2SLS linearmodels ---\n",
+    "df = pd.DataFrame({\n",
+    "    'y': y,\n",
+    "    'D': d,\n",
+    "    'Z': z,\n",
+    "    'X': x\n",
+    "})\n",
+    "\n",
+    "iv_model = IV2SLS.from_formula(\n",
+    "    \"y ~ 1 + X + [D ~ Z]\",   # ✅ fórmula correcta\n",
+    "    data=df\n",
+    ").fit(cov_type=\"unadjusted\")\n",
+    "\n",
+    "print(\"\\n=== IV 2SLS (IV2SLS) ===\")\n",
+    "print(\"beta_D      =\", iv_model.params['D'])\n",
+    "print(\"se(beta_D)  =\", iv_model.std_errors['D'])\n",
+    "print(\"F 1ra etapa =\", iv_model.first_stage.diagnostics['f.stat'].iloc[0])"
+   ]
   }
  ],
  "metadata": {
